--- a/sites/all/themes/openscholar/cp_theme/css/cp-typography.css
+++ b/sites/all/themes/openscholar/cp_theme/css/cp-typography.css
@@ -25,8 +25,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li a:hover {
   list-style: none !important;
   }
 
-#cp-sidemenu li a,
-#cp-sidemenu li a:visited {
+#cp-sidemenu li a, #cp-sidemenu li a:visited {
   color: #626161;
   font-weight: bold;
   padding: 6px 23px;
