--- a/sites/all/modules/openscholar_vsite/vsite_design/theme/vsite_design_theme_picker.css
+++ b/sites/all/modules/openscholar_vsite/vsite_design/theme/vsite_design_theme_picker.css
@@ -75,6 +75,16 @@ ul.theme-picker li.checked h3, .item-theme-picker li.checked .form-item {
   margin: 0 !important;
   }
 
+.theme_subnav {
+  padding-top: 13px;
+  background:#eaebe9;
+  height: 32px;
+  padding-left: 30px;
+  padding-left: 30px;
+  margin-left: -30px;
+  margin-top: -30px;
+  }
+
 .theme_subnav h3, .theme_subnav ul, .theme_subnav li, #next, #prev {
   float: left;
   margin-right: 10px;
