--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -515,7 +515,7 @@ ul.admin li a:hover {
   }
 
 a.delete {
-  background: url('../images/openscholar-sprite.png') no-repeat 0 -241px transparent;
+  background: url('../images/scholarbase-sprite.png') no-repeat 0 -241px transparent;
   height: 11px;
   width: 10px;
   display: block;
@@ -523,10 +523,14 @@ a.delete {
   }
 
 .close-this {
-  width: 15px;
-  height: 15px;
-  background: url('../images/openscholar-sprite.png') no-repeat 0 0 transparent;
+  width: 12px;
+  height: 12px;
+  background: url('../images/scholarbase-sprite.png') no-repeat 0 0 transparent;
   text-indent: -999em;
+  }
+
+.close-this:hover {
+  background-position: 100% 0;
   }
 
 .empty-content {
@@ -553,7 +557,7 @@ input.form-button,
 button,
 .views-exposed-form .views-exposed-widget .form-submit,
 p.copy a.footer-login {
-  background: url('../images/openscholar-sprite.png') repeat-x 0 -280px #e8e8e8;
+  background: url('../images/scholarbase-sprite.png') repeat-x 0 -280px #e8e8e8;
   color: #000 !important;
   border: 1px solid #c4c4c4;
   border-bottom-color: #707070;
@@ -608,7 +612,7 @@ p.copy a.footer-login:active {
 
 
 .advanced-help-link {
- background: url('../images/openscholar-sprite.png') 0 -150px no-repeat transparent;
+ background: url('../images/scholarbase-sprite.png') 0 -150px no-repeat transparent;
  width: 15px;
  height: 15px;
  margin-right: 4px;
