typography layout area

--- a/sites/all/modules/openscholar_vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/openscholar_vsite/vsite_layout/theme/vsite_layout.css
@@ -71,8 +71,8 @@
   }
 
 dd.scholarlayout-item {
-  font-size: 13px;
-  line-height: 15px;
+  font-size: 12px;
+  line-height: 13px;
   font-weight: bold;
   color:#565e66;
   cursor: pointer;
@@ -95,7 +95,7 @@ dd.scholarlayout-item {
   margin: 0;
   padding: 4px 20px 8px 31px;
   background: url(images/widget-placed-bg.png) no-repeat 0 50% #f0f3f3;
-  height: 23px;
+  min-height: 23px;
   position:relative;
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #666;
@@ -105,6 +105,7 @@ dd.scholarlayout-item {
 #scholarlayout-container #scholarlayout-footer dd.scholarlayout-item, #scholarlayout-container #scholarlayout-navbar dd.scholarlayout-item {
   width: 282px;
   float:left;
+  height: 23px;
   }
 
 #scholarlayout-container dd.scholarlayout-item:hover {
@@ -116,7 +117,7 @@ dd.scholarlayout-item {
 .scholarlayout-item-settings {
   color:#90a0a0;
   font-weight: normal;
-  font-size: .9em;
+  font-size: 12px;
   display:block;
   text-transform: none;
   }
