moving current changes to trunk

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -155,11 +155,11 @@ a:hover {
   }
 
 .toggle {
-  background-position: 100% -196px;
+  background-position: 100% 3px;
   }
 
 .toggle.expanded {
-  background-position: 100% -214px;
+  background-position: 98% 15px;
   }
 
 a.more {
@@ -170,6 +170,15 @@ a.more {
  color: #fff;
  padding: 0 10px;
  background: url(images/arrow-white.png) 100% 50% no-repeat transparent;
+  }
+
+
+#content .context-links {
+  margin-top: 5px;
+  }
+
+.section-biocv #content .context-links {
+  margin-top: -96px;
   }
 
 .page-home .more-link {
@@ -570,11 +579,9 @@ body.header-right-main #header-wrapper {
   border-radius: 10px 0 0 10px;
   }
 
-/*
 html.js div.ctools-dropdown div.ctools-dropdown-container {
   min-width: 141px;
   }
-*/
 
 html.js .page-home #header-main div.ctools-dropdown div.ctools-dropdown-container {
  top: 0;
