--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -66,7 +66,11 @@ img {
 #top {
   height: 42px;
   background:url('../images/top-bottom-bg.png') repeat-x #000 0 -9px;
-  position:relative;
+  position:absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
   }
 
 body.cp-toolbar-mini #top {
