fixed top mini display, admin links

--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -74,14 +74,11 @@ img {
   }
 
 body.cp-toolbar-mini #top {
-  position: absolute;
   height: 20px;
-  right: 0;
-  top: 0;
   padding: 0;
   line-height: normal;
   background: transparent;
-  z-index: 10;
+  left: auto;
   }
 
 /* Remove when .mini class is added to #top, rather than body */
@@ -95,6 +92,7 @@ body.cp-toolbar-mini #top ul.links {
   background: url('../images/toolbar-mini-tab.png') no-repeat 0 0;
   height: 22px;
   z-index:100;
+  padding-right: 6px;
   }
 
 
