--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -290,9 +290,10 @@ ul.inline li {
 
 ul.links li {
   padding:0;
+
   }
 
-.node div.links .links li {
+.node .links li {
   float: left;
   font-size: 11px !important;
   }
