--- a/sites/all/themes/openscholar/openscholar_default/css/openscholar_default.css
+++ b/sites/all/themes/openscholar/openscholar_default/css/openscholar_default.css
@@ -15,15 +15,14 @@ body {
   margin: 0 auto;
   }
 
-.front #container,
-.front #content-bottom {
+.front #container {
   width: 962px;
   }
 
 .not-front #content-main,
 .front #content-top,
 .front #content-bottom {
- padding: 30px 30px 40px 30px;
+ padding: 30px 0 40px 0;
  background: #fff;
  border: 1px solid #ccc;
  -moz-border-radius: 6px;
@@ -167,6 +166,7 @@ td, td.description {
 .front #content-top #block-openscholar_front-video_info {
   float:left;
   width: 638px;
+  margin-left:15px;
   }
 
 .front #content-top #block-openscholar_front-site_mission {
@@ -175,8 +175,9 @@ td, td.description {
   margin-bottom: 0;
   color: #4a4949;
   line-height: 1.4em;
-  width: 240px;
+  width: 226px;
   margin-top:59px;
+  margin-right: 3px;
   }
 
 /* SEARCH FORM */
