--- a/sites/all/themes/openscholar/scholar_base/css/system.css
+++ b/sites/all/themes/openscholar/scholar_base/css/system.css
@@ -366,3 +366,38 @@ span.password-confirm span {
   font-weight: normal;
 	}
 
+/* MESSAGES */
+
+div.messages {
+  background:#BBDDFF;
+  border:1px solid #AACCEE;
+  color:#003366;
+  margin:0 0 10px;
+  padding:9px;
+  clear:both;
+  }
+
+div.status {
+  background:#CCFF88;
+  border:1px solid #BBEE77;
+  color:#336600;
+  margin:0 0 10px;
+  padding:9px;
+  }
+
+div.warning {
+  background: #FFEE66;
+  border:1px solid #EEDD55;
+  color:#884400;
+  margin:0 0 10px;
+  padding:9px;
+  }
+
+div.error {
+  background:#EE6633;
+  border:1px solid #DD5522;
+  color:#FFFFFF;
+  margin:0 0 10px;
+  padding:9px;
+  }
+
